# Gaze-Controlled-Computer

./: CMakeLists.txt  README.md  build.sh
Arduino/: working_mouse_click.ino
samples/: README.md
samples/Calibration/: calibration_GUI.py  calibration_first.py  instructions.py
samples/Gaze/: Calibration.cpp  Makefile  Makefile~  README.md  calibration.cpp  design4.txt  gaze_lib.cpp  gaze_lib.hpp  gaze_to_cursor.cpp
samples/arduino/: Makefile  USB_read.c  USB_read.h
samples/camshift/: Makefile  camshift.cpp
samples/canny_filter/: Makefile  test
samples/canny_pupil_sample/: Makefile  opti  optimized.cpp  test  test.cpp  v4ldevice.h
samples/cropping/: Makefile  crop.cpp
samples/pupil_detection/: test  test.cpp
samples/v4lopencv/: Makefile  main.cpp  opencv-test  v4ldevice.cpp
src/: CMakeLists.txt  CMakeLists.txt~  Calibration.cpp  Calibration.hpp  Gaze_main.cpp  constants.hpp  constants.hpp~  cursor_coordinates.cpp  cursor_coordinates.hpp  detect.cpp  detect.cpp~  detect.hpp  gaze_lib.cpp  gaze_lib.hpp  gaze_lib_corner.cpp  gaze_lib_corner.hpp  main.cpp  main.cpp~  pupilLoc.cpp  pupilLoc.hpp  pupil_detect.cpp  pupil_detect.hpp  v4ldevice.cpp
